--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint-webpack-plugin": "^0.10.1"
   },
   "dependencies": {
+    "directus-sdk-javascript": "^2.7.0",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
     "vuex": "^3.0.1"
