--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "directus-sdk-javascript": "^2.7.0",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
+    "vue-quill-editor": "^3.0.5",
     "vuex": "^3.0.1"
   }
 }
