--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "directus-sdk-javascript": "^2.7.0",
+    "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
