--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "quill-image-resize-module": "^3.0.0",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
+    "vue-dragula": "^1.3.1",
     "vue-quill-editor": "^3.0.5",
     "vuex": "^3.0.1"
   }
