--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-directus",
+  "name": "vue-playground",
   "version": "1.0.0",
-  "description": "A Vue.js plugin for front-end content editing.",
+  "description": "Custom Vue.js boilerplate project to play with.",
   "author": "Oskar Rainer",
   "private": true,
   "browserslist": [
@@ -40,13 +40,8 @@
     "stylelint-webpack-plugin": "^0.10.1"
   },
   "dependencies": {
-    "directus-sdk-javascript": "^2.7.0",
-    "quill-image-drop-module": "^1.0.3",
-    "quill-image-resize-module": "^3.0.0",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
-    "vue-dragula": "^1.3.1",
-    "vue-quill-editor": "^3.0.5",
     "vuex": "^3.0.1"
   }
 }
