--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "directus-sdk-javascript": "^2.7.0",
+    "lodash": "^4.17.5",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
     "vuex": "^3.0.1"
