--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.5",
     "reset-css": "^2.2.1",
     "vue": "^2.5.13",
+    "vue-dragula": "^1.3.1",
     "vuex": "^3.0.1"
   }
 }
