--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "stylelint-webpack-plugin": "^0.10.1"
   },
   "dependencies": {
+    "deep-object-diff": "^1.1.0",
     "directus-sdk-javascript": "^2.7.0",
     "lodash": "^4.17.5",
     "reset-css": "^2.2.1",
