--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "stylelint-webpack-plugin": "^0.10.1"
   },
   "dependencies": {
-    "deep-object-diff": "^1.1.0",
     "directus-sdk-javascript": "^2.7.0",
     "lodash": "^4.17.5",
     "reset-css": "^2.2.1",
+    "shortid": "^2.2.8",
     "vue": "^2.5.13",
     "vue-dragula": "^1.3.1",
     "vuex": "^3.0.1"
