--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
   "dependencies": {
     "directus-sdk-javascript": "^2.7.0",
     "lodash": "^4.17.5",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
     "reset-css": "^2.2.1",
     "shortid": "^2.2.8",
     "vue": "^2.5.13",
     "vue-dragula": "^1.3.1",
+    "vue-quill-editor": "^3.0.5",
     "vuex": "^3.0.1"
   }
 }
