--- a/package.json
+++ b/package.json
@@ -47,7 +47,14 @@
     "reset-css": "^2.2.1",
     "shortid": "^2.2.8",
     "vue": "^2.5.13",
+    "vue-core-image-upload": "^2.4.2",
+    "vue-crop": "^1.0.1",
+    "vue-croppa": "^1.2.0",
+    "vue-cropper": "^0.2.9",
+    "vue-croppie": "^1.3.10",
     "vue-dragula": "^1.3.1",
+    "vue-image-crop-upload": "^2.2.3",
+    "vue-image-cropper": "^1.0.6",
     "vue-quill-editor": "^3.0.5",
     "vuex": "^3.0.1"
   }
