--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^6.0.16",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.0.0",
+    "postcss-nested": "^3.0.0",
     "prettier": "^1.10.2",
     "stylelint": "^8.4.0",
     "stylelint-config-prettier": "^2.0.0",
@@ -42,9 +43,9 @@
   "dependencies": {
     "directus-sdk-javascript": "^2.7.0",
     "lodash": "^4.17.5",
+    "normalize.css": "^8.0.0",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
-    "reset-css": "^2.2.1",
     "shortid": "^2.2.8",
     "vue": "^2.5.13",
     "vue-croppie": "^1.3.10",
