--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "vue-croppie": "^1.3.10",
     "vue-dragula": "^1.3.1",
     "vue-images-loaded": "^1.1.2",
-    "vue-quill-editor": "^3.0.5",
+    "vue2-editor": "^2.4.2",
     "vuex": "^3.0.1"
   }
 }
